fix input group layout breaking when input-group is inside a form-group

--- a/less/forms.less
+++ b/less/forms.less
@@ -127,6 +127,10 @@ label.form-label {
 		display: block;
 	}
 
+	.input-group input.input {
+		display: table-cell;
+	}
+
 }
 
 
